# Finz

./: Cargo.toml  docker-compose-dev.yaml
db/: ddl.sql
src/: main.rs
src/auth/: auth_controller.rs  auth_repository.rs  auth_service.rs  error.rs  mod.rs
src/auth/dtos/: authenticate_dto.rs  login_payload.rs  mod.rs
src/auth/model/: account.rs  user.rs
tests/: quick_dev.rs
