[package]
name = "finz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
once_cell = "1.19.0"
serde =  {version ="1.0.199", features= ["derive"]}
serde_json = "1.0.116"
sqlx = {version = "0.7.4" , features=["postgres", "runtime-tokio", "time", "uuid", "macros"] }
time = {version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }
tokio = {version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = {version = "0.5.2", features = ["fs"]}

uuid = {version = "1.8.0", features = ["v7", "serde"] }

[dev-dependencies]
httpc-test = "0.1.9"
anyhow = "1.0.82"
